--- a/src/features/posts/Post.module.css
+++ b/src/features/posts/Post.module.css
@@ -1,24 +1,43 @@
 .post {
   background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 8px;
-  padding: 16px;
-  margin-bottom: 16px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 12px 16px;
+  margin-bottom: 12px;
+  width: 100%;
   max-width: 600px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  font-family: Arial, sans-serif;
+  height: fit-content;
+}
+
+.post:hover {
+  background-color: #f6f7f8;
+  cursor: pointer;
+}
+
+.video {
+  max-height: 700px;
+}
+
+@media (max-width: 768px) {
+  .post {
+    border-radius: 0;
+    padding: 12px;
+    max-width: 100%;
+  }
 }
 
 .post p {
-  font-size: 0.9rem;
+  font-size: 1rem;
   color: #555;
   margin-bottom: 8px;
+  text-align: center;
 }
 
 .post h3 {
   font-size: 1.2rem;
   margin-bottom: 12px;
   color: #222;
+  text-align: center;
 }
 
 .post img {
