--- a/src/features/posts/Postlist.module.css
+++ b/src/features/posts/Postlist.module.css
@@ -4,3 +4,11 @@
   align-items: center;
   width: 100%;
 }
+
+.loadingPost {
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #ff4500;
+  text-align: center;
+  margin: 2rem 0;
+}
