--- a/src/components/Header/Popular.module.css
+++ b/src/components/Header/Popular.module.css
@@ -6,9 +6,8 @@
 }
 
 .loadingPost {
-  font-size: 1.2rem;
-  font-weight: bold;
-  color: #ff4500;
-  text-align: center;
-  margin: 2rem 0;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-top: 50px;
 }
